
0.30 Thu Feb  2 17:55:09 GMTST 2012
        - reverted the cmwiki links in the doc to cmcrossroads.../cgi-bin/...
	- cptype: fix for remote copy of a global type
	- mklabel -up: fix for version extended names
	- mklabel -fullcopy
	- _Ensuretypes: back to local in every case.
	- lstype fix: do not abort for sync errors unless in presence of admin vob
	- rollout: fix to comment handling (bug report by Andy Walshe)

0.31 Tue Feb  7 15:28:15 GMTST 2012
        - co: implemented the -out and -nda functionalities
	- rb: fixed the help string (-to changeset)
	- mklabel: disambiguated -c(comment) from -con(fig)

0.32 Sat Mar 31 11:53:04 IST 2012
        - ar: as alias to archive
	- extra/fixsrccnt: fix the previous version in the source container,
          after branching off the root of the version tree.
	- mklabel -up -follow: fixed a bug for symlink to ../../xxx
	- added fix source container instructions to extra/Configuration.pod
	- renamed FSCbroker to FSCbrokeSsh
	- annotate: fixes, in conjunction with new options: -line and -grep

1.00 Sat Jul 14 11:46:27 IST 2012
        - no major change anymore in sight: formal publication signal
        - rollout: typo in help string
	- rollout: check lock of baseline, and lock it as configured
	- rollback: fix to remote case on UNIX
	- _wrap: renamed to _Wrap, and made small functions non autoload
	- mkview -equiv: accept times with dashes and dots instead of spaces
	- added a synctree function, optionally fixing text file containers
	- annotate -grep: only the lines searched
	- extra/FSCbrokerSuDo: skip sudo for the owner account
	- support 'an' shortcut
	- lock: minor fix--pass non lbtype args to cleartool unaltered
	- unlock performs a cptype if needed
	- mklbtype -inc: test locally mastered before creating new increment
	- extra/locklbtypesudo, as well as renamed locklbtype to locklbtypessh
	- lsgen: fix-- with the -a option, siblings were missed in the genealogy
	- lsgen -offspring (new option)