@@ -222,15 +222,16 @@ Revision history for Perl extension ClearCase::Wrapper::MGi.
         - rollout: typo in help string
 	- rollout: check lock of baseline, and lock it as configured
 	- rollback: fix to remote case on UNIX
-	- _wrap: renamed to _Wrap, and made small functions non autoload
+	- renamed _wrap to _Wrap, and made small functions non autoload
 	- mkview -equiv: accept times with dashes and dots instead of spaces
 	- added a synctree function, optionally fixing text file containers
 	- annotate -grep: only the lines searched
 	- extra/FSCbrokerSuDo: skip sudo for the owner account
-	- support 'an' shortcut
+	- support 'an' shortcut (for annotate)
 	- lock: minor fix--pass non lbtype args to cleartool unaltered
 	- unlock performs a cptype if needed
 	- mklbtype -inc: test locally mastered before creating new increment
 	- extra/locklbtypesudo, as well as renamed locklbtype to locklbtypessh
 	- lsgen: fix-- with the -a option, siblings were missed in the genealogy
 	- lsgen -offspring (new option)
+	- lsgen -fmt (new option)
